fix: updated bottom score bar alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -184,13 +184,11 @@ a {
 @media (max-width: 800px) {
     .game-layout {
         flex-direction: column;
-        justify-content: flex-start;
-        padding-bottom: 60px;
     }
     
     .game-question {
         flex: none;
-        margin: 10px 10px 5px 10px;
+        margin: 10px;
         order: 1;
         width: 95%;
         max-width: 500px;
@@ -206,26 +204,21 @@ a {
         width: clamp(120px, 50vw, 200px);
     }
     
-    .game-form {
-        margin-bottom: 5px;
-    }
-    
     .game-scorecard {
-        position: fixed;
-        bottom: 40px;
-        left: 50%;
-        transform: translateX(-50%);
+        order: 2;
         width: 90%;
         max-width: 400px;
+        margin: 10px auto;
         padding: 5px 10px;
         flex-direction: row;
         align-items: center;
+        justify-content: center;
+        align-self: center;
         background: white;
         border-radius: 8px;
         border: 3px solid green;
         height: 20px;
         max-height: 20px;
-        z-index: 100;
     }
     
     .game-scorecard fieldset {
